--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Wenrui Zhao
-subtitle: This is where I will tell my friends way too much about me
+subtitle: Seeking for a RA/PhD position.
 ---
